# kyros

./: CMakeLists.txt  LICENSE  README.md  package.json
src/: kyros.c  kyros_bitset.h  kyros_internal.h  loop.c  socket.c
src/include/: kyros.h
test/: main.c
